Updates to get build of saros.eclipse to go through